# xcf-pixbuf-loader

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  autogen.sh  configure.ac  io-xcf.c  test01.xcf  test02.xcf  test03.xcf.bz2
